<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2015 The CyanogenMod Project
     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
          http://www.apache.org/licenses/LICENSE-2.0
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <string name="lepref_title">Leeco Extras</string>
 
    <!-- Battery -->
    <string name="battery_settings_title">Battery</string>
    <string name="qc_title">Quick Charge</string>
    <string name="qc_summary">Enable/disable quick charge settings</string>

	<!-- AKT Profiles -->
    <string name="akt_profile_title">AKT Profile</string>
    <string name="akt_title">AKT Profile</string>
    <string name="akt_summary">Choose your power saver profile</string>
    <string name="akt_dialogTitle">Choose your power saver profile</string>
	
	<!-- Camera -->
    <string name="camera_pref_title">Camera</string>
    <string name="hal3_title">Camera 2 API</string>
    <string name="hal3_summary">Enable/disable API2 mode for camera</string>

    <string name="semiidle_pref_title">SemiIdle</string>
    <string name="semiidle_title">SemiIdle Mode</string>
    <string name="semiidle_summary">Enable/disable SemiIdle mode while screen on</string>

    <string name="cpusleep_pref_title">CPU Sleep while Screen On</string>
    <string name="cpusleep_title">CPU Sleep while screen on Mode</string>
    <string name="cpusleep_summary">Enable/disable CPU Sleep mode while screen on</string>

    <string name="imssrv_pref_title">IMS Services</string>
    <string name="imssrv_title">IMS Services</string>
    <string name="imssrv_summary">Enable/disable IMS Services</string>

</resources>
